--- a/templates/home.html
+++ b/templates/home.html
@@ -2,6 +2,12 @@
 
 {% block content %}
 
-<h1>Hello, welcome home!</h1>
+    <h1>Hello, welcome home!</h1>
+
+    <form method="POST" action="">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <input type="submit" value="Subscribe" class="btn btn-success">
+    </form>
 
 {% endblock %}
