adjust the home page to fit master linux company landing page

--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,7 @@
 <body>
 
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-    <a class="navbar-brand" href="#">Navbar</a>
+    <a class="navbar-brand" href="#">Master Linux</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
             aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -58,11 +58,18 @@
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
         <div class="container">
-            <h1 class="display-3">Hello, world!</h1>
-            <p>This is a template for a simple marketing or informational website. It includes a large callout called a
-                jumbotron and three supporting pieces of content. Use it as a starting point to create something more
-                unique.</p>
-            <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
+            <div class="row">
+                <div class="col-md-8">
+                    <h2 class="display-3">Master Linux training!</h2>
+                    <p>Welcome to master linux web app. You can join our courses to master RHEL redhat enterprise linux
+                        servers. It's so powerful, stable and secured!</p>
+                    <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
+                </div>
+                <div class="col-md-3 well">
+                    <img src="https://seeklogo.com/images/L/Linux_Red_Hat-logo-8B748E6BCC-seeklogo.com.png"
+                         alt="redhat_logo" class="img-thumbnail">
+                </div>
+            </div>
         </div>
     </div>
 
