--- a/templates/share.html
+++ b/templates/share.html
@@ -2,6 +2,6 @@
 
 {% block content %}
 
-{{ ref_id }}
+<p>This email is already subscribed with reference url : <a href="http://localhost:8000/{{ ref_id }}">http://localhost:8000/{{ ref_id }}</a></p>
 
 {% endblock %}
