--- a/templates/home.html
+++ b/templates/home.html
@@ -2,11 +2,11 @@
 
 {% block content %}
 
-    <h1>Hello, welcome home!</h1>
+    <h2>Subscribe and get in touch!</h2>
 
     <form method="POST" action="">
     {% csrf_token %}
-    {{ form.as_p }}
+    {{ form }}
     <input type="submit" value="Subscribe" class="btn btn-success">
     </form>
 
